# xoev-xwasser-rs

./: .gitignore  Cargo.toml  README.md  build-web.sh  build.rs  build.sh  package.json  package.tmp.json  package.tmp.web.json  pnpm-lock.yaml  rust-toolchain.toml  tsconfig.json  tsconfig.test.json  tsconfig.utils.json  tsup.config.ts  utils.env.d.ts  vite.config.ts
.github/workflows/: build.yaml  build.yml  publish.yaml  publish.yml
crates/codelists/: Cargo.toml  README.md  build.rs
crates/codelists/data/V0_7_0/: Abhilfemaßnahmen_1.xml  Anlass der Untersuchung_2.xml  Art der Probennahmestelle EU_1.xml  Art der Wasserressource_1.xml  Art des Objekts_1.xml  Aufbereitungsstoffe und Desinfektionsverfahren_2.xml  Betriebszustand_1.xml  DESTATIS Staatsangehörigkeit_2024-08-01.xml  DSMeld Auskunftssperre (DSMeld-Blatt 1801)_5.xml  Desinfektionsart_1.xml  Incident Category_1.xml  Incident Exceedance Cause_1.xml  Kategorie des Vorfalls_1.xml  Medium_1.xml  Nachrichtentyp_1.xml  Parameterausprägung_2.xml  Parameterunterauswahl_1.xml  Probenbewertung_1.xml  Probengefäß_1.xml  Rechtsformen_2.2.xml  SHAPTH Parameter_2.xml  Vertretungsart_1.xml  WVA_1.xml
crates/codelists/data/V0_7_2/: Datentyp_1.1.xml  Parameterausprägung_3.xml  Rahmen der Trinkwasserbereitstellung_1.xml  SHAPTH Parameter_3.xml  Untersuchungsstelle_1.xml  Wasserversorgungsgebiet_1.xml
crates/codelists/data/V0_8_0/: Gesamtbewertung_2.xml  Grund Schließung Wasserversorgungsgebiet_1.xml  Messwertergänzung_1.xml  Status Untersuchungsplan_1.xml  Untersuchungsverfahren_2.xml  Überwachung der Trinkwasseraufbereitung_1.xml
crates/codelists/data/V0_9_0/: Auftraggeberart_1.xml  Kategorie der Probennahmestelle_1.xml  Unterkategorie Probennahmestelle_1.xml  XInneres Geschlecht_1.xml
crates/codelists/data/V0_9_1/: Bewertung des Untersuchungswerts_1.xml  Probennahmeverfahren_1.xml
crates/codelists/data/V0_9_2/: Bundesland_2010-04-01.xml  Probennahmezeitraum_1.xml  SHAPTH Parameter Einheit_2.xml  Status fachlich_1.xml  Überschreitungsursache_1.xml  Überwachung der Trinkwasseraufbereitung_2.xml
crates/codelists/data/V0_9_5/: Art der Trinkwasseranlage_1.xml  DSMeld Pass- und Ausweisdokumente (Anlage 3 des DSMeld)_5.xml  DSMeld_Familienstand_(DSMeld-Blatt_1401)_2.xml  Erläuterung zur Wasserabgabemenge_1.xml  Kategorie der Probennahmestelle_2.xml  Messwertergänzung_2.xml  Nachweisart_1.xml  Rechtsformen_2.3.xml  SHAPTH Parameter_4.xml  Status Untersuchungsplan_2.xml
crates/codelists/data/V1_0_0/: AGS_2026-03-31.xml  AGS_2026-04-30.xml  Abhilfemaßnahmen_2.xml  Amtssprache EU_2.xml  Anlass der Untersuchung_3.xml  Anschrifttyp_2.0.xml  Art der Probennahmestelle EU_2.xml  Art der Probennahmestelle_2.xml  Art der Trinkwasseranlage_2.xml  Art der Wasserressource_2.xml  Art des Objekts_2.xml  Art des gesetzlichen Vertreters_1.xml  Aufbereitungsstoffe und Desinfektionsverfahren_3.xml  Auftraggeberart_1.xml  Betriebszustand_1.xml  Bewertung des Untersuchungswerts_1.xml  DSMeld Familienstand Beendigungsgrund (DSMeld-Blatt 1405)_3.xml  Desinfektionsart_2.xml  Dokumenttyp_1.xml  Erläuterung zur Wasserabgabemenge_1.xml  Flockung_1.xml  Format Alternative ID_Gesundheit_1.xml  Format Alternative ID_Umwelt_1.xml  Gesamtkatalog der Sprachen, die im Ausländerwesen verwendet werden_11.xml  Grund Schließung Wasserversorgungsgebiet_1.xml  Grund der Ausnahmeregelung_1.xml  Incident Category_2.xml  Incident Exceedance Cause_2.xml  Kategorie der Probennahmestelle_3.xml  Kategorie des Vorfalls_1.xml  Kreis_2026-01-31.xml  Länderkennzeichen_1.xml  Maßnahmen_2.xml  Nachrichtentyp_1.xml  Nachweisart_1.xml  Namensart_1.xml  Parameterausprägung_5.xml  Probenbewertung_1.xml  Probenentnahmegerät_1.xml  Probengefäß_1.xml  (+30 more)
crates/codelists/public/V0_7_0/: README.md  codelist.json
crates/codelists/public/V0_7_2/: README.md  codelist.json
crates/codelists/public/V0_8_0/: README.md  codelist.json
crates/codelists/public/V0_9_0/: README.md  codelist.json
crates/codelists/public/V0_9_1/: README.md
crates/codelists/public/V0_9_2/: README.md
crates/codelists/public/V0_9_5/: README.md  codelist.json
crates/codelists/public/V1_0_0/: README.md  codelist.json
crates/codelists/src/: lib.rs  v0_7_0.rs  v0_7_2.rs  v0_8_0.rs  v0_9_0.rs  v0_9_1.rs  v0_9_2.rs  v0_9_5.rs  v1_0_0.rs
crates/codelists/src/cl/: model.rs
crates/codelists/src/cl/parser/: input.rs  mod.rs  parse.rs
crates/derive/: Cargo.toml
fixtures/: simple_test.json
schemas/V0_5_0/: xwasser-administration.xsd  xwasser-basisdatentypen.xsd  xwasser-basisnachricht.xsd  xwasser-baukasten-erweiterung.xsd  xwasser-baukasten.xsd  xwasser-rueckweisung.xsd  xwasser-vorgang.xsd  xwasser-weiterleitung.xsd  xwasser.xsd  (+1 more)
scripts/: codes.js
src/: lib.rs  model.rs  schemas.rs  validate.rs  wasm.rs
tests/: administration_receipt.json  administration_receipt.rs  administration_receipt.test.ts  administration_receipt.xml  administration_receipt_test_result.xml  generate_schemas.rs  monitoring_plan_builder.json  monitoring_plan_builder.rs  monitoring_plan_builder_test_result.xml  monitoring_plan_maximal.json  monitoring_plan_maximal.rs  monitoring_plan_maximal.test.ts  monitoring_plan_maximal.xml  monitoring_plan_maximal_test_result.xml  monitoring_plan_minimal.json  monitoring_plan_minimal.rs  monitoring_plan_minimal.test.ts  monitoring_plan_minimal.xml  monitoring_plan_minimal_test_result.xml  olb_report_minimal.json  olb_report_minimal.rs  olb_report_minimal.test.ts  olb_report_minimal.xml  olb_report_minimal_test_result.xml  olb_report_signature.rs  olb_report_signature_builder.json  olb_report_signature_builder_test_result.xml  quality_report_builder.json  quality_report_builder.rs  quality_report_builder.test.ts  quality_report_builder_test_result.xml  quality_report_maximal.json  quality_report_maximal.rs  quality_report_maximal.xml  quality_report_maximal_test_result.xml  quality_report_minimal.json  quality_report_minimal.rs  quality_report_minimal.test.ts  quality_report_minimal.xml  quality_report_minimal_test_result.xml  (+5 more)
utils/: xoev-xwasser-utils.ts
xtask/: Cargo.toml
xtask/src/: main.rs
(+164 files in other folders)
