[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2021"
version = "0.600.0+0.6.0"
description = """
"XOEV XWasser XML Standard"
"""
rust-version = "1.78.0"
authors = ["H & D GmbH Open Source <contact-oss@h-d-gmbh.de>"]
license = "MIT"
repository = "https://github.com/hd-gmbh-dev/xoev-xwasser-rs"
categories = []
keywords = []

[workspace.dependencies]
anyhow = "1.0.89"
xoev-xwasser-derive = { version = "0.600.0", path = "crates/derive" }
raxb = "0.4.4"
raxb-validate = "0.4.4"
raxb-xmlschema = "0.4.4"
raxb-xmlschema-build = "0.4.4"
# raxb = { path = "../raxb/crates/raxb" }
# raxb-validate = { path = "../raxb/crates/raxb-validate"}
# raxb-xmlschema = { path = "../raxb/crates/raxb-xmlschema"}
# raxb-xmlschema-build = { path = "../raxb/crates/raxb-xmlschema-build"}

[package]
name = "xoev-xwasser"
edition.workspace = true
version.workspace = true
description.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
trace = []
builder = ["dep:typed-builder", "dep:uuid", "dep:chrono"]
wasm = ["dep:wasm-bindgen", "dep:serde-wasm-bindgen", "dep:tsify", "dep:uuid", "uuid/js"]
schema = [
    "dep:rust-embed",
    "dep:raxb-validate",
    "dep:raxb-xmlschema",
    "dep:anyhow",
]

[dependencies]
xoev-xwasser-derive.workspace = true
anyhow = { version = "1", optional = true }
rust-embed = { version = "8.5.0", optional = true }
raxb = { workspace = true, features = ["trace"] }
raxb-validate = { workspace = true, optional = true }
raxb-xmlschema = { workspace = true, optional = true }
wasm-bindgen = { version = "0.2.93", optional = true }
serde-wasm-bindgen = { version = "0.5.0", optional = true }
tsify = { version = "0.4.5", features = ["js"], optional = true }
serde = { version = "1.0.210", features = ["derive"] }
typed-builder = { version = "0.20.0", optional = true }
uuid = { version = "1.10.0", features = ["v4"], optional = true }
chrono = { version = "0.4.38", optional = true }

[build-dependencies]
anyhow.workspace = true
raxb-xmlschema-build.workspace = true

[dev-dependencies]
anyhow.workspace = true
raxb-xmlschema-build.workspace = true
serde_json = "1.0.128"
test-log = { version = "0.2.16", features = ["trace", "color"] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
