[package]
name = "xoev-xwasser-codelists"
edition.workspace = true
version.workspace = true
description.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[features]
default = []
trace = ["raxb/trace"]

[dependencies]
anyhow.workspace = true
bson = "2.13.0"
serde.workspace = true
raxb.workspace = true
rust-embed = { version = "8.5.0", features = ["interpolate-folder-path"] }
unicode-normalization = "0.1.24"

[build-dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json = "1.0.128"
raxb.workspace = true
bson = "2.13.0"
encoding_rs = "0.8.34"
unicode-normalization = "0.1.24"
